--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/hmhaider93/NeuerWEG-backend#readme",
   "dependencies": {
+    "@mailchimp/mailchimp_marketing": "^3.0.32",
     "body-parser": "^1.19.0",
     "express": "^4.17.1"
   }
